# target-portfolio-web

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.bat  run.sh  stop.bat  stop.sh
app/: __main__.py  exceptions.py  main.py
app/api/: deps.py  moex.py  portfolio.py  router.py
app/core/: config.py  constants.py  database.py
app/models/: asset_create.py  assets.py  bond.py  currency.py  portfolio_item.py  position.py  share.py  transaction.py
app/repositories/: asset.py  portfolio.py
app/services/: moex.py  portfolio.py  portfolio_aggregate.py
app/web/: router.py
app/web/static/css/: style.css  styles.css
app/web/static/js/: pie-chart.js  scripts.js
app/web/templates/: index.html
