[project]
name = "target-portfolio"
version = "0.1.0"
description = "Simple target-portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomoex>=2.1.2",
    "apscheduler>=3.11.2",
    "beanie>=2.0.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymoex",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
pymoex = { git = "https://github.com/Akxios/pymoex.git", rev = "dev" }
